# simple_sfm

./: .clang-format  .cmake-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  install_deps.sh  package.xml
.devcontainer/: Dockerfile  devcontainer.json
docs/: devcontainer.md  development.md
samples/ros1/simple_sfm_ros/: CMakeLists.txt
samples/ros1/src/simple_sfm_ros/: CMakeLists.txt  package.xml
samples/ros1/src/simple_sfm_ros/launch/: simple_sfm.launch
samples/ros1/src/simple_sfm_ros/rviz/: simple_sfm.rviz
samples/ros1/src/simple_sfm_ros/simple_sfm/: CMakeLists.txt  conanfile.py
samples/ros1/src/simple_sfm_ros/simple_sfm/include/simple_sfm/: ceres_back_end.h  factor_graph_back_end.h  simple_sfm.h  types.h  utils.h
samples/ros1/src/simple_sfm_ros/simple_sfm/src/: ceres_back_end.cpp  factor_graph_back_end.cpp  simple_sfm.cpp  utils.cpp
samples/ros1/src/simple_sfm_ros/simple_sfm/tests/: CMakeLists.txt  factor_graph_back_end_test.cpp  types_test.cpp  utils_test.cpp
samples/ros1/src/simple_sfm_ros/src/: camera_viz.h  simple_sfm_node.cpp
