<?xml version="1.0"?>
<package format="2">
    <name>simple_sfm_ros</name>
    <version>1.0.0</version>
    <description>A gentle but practical introduction to (Structure from Motion) algorithms</description>

    <author>Amey Sutavani</author>
    <maintainer email="amey.sutavani@gmail.com">Amey Sutavani</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <!-- ROS dependencies -->
    <depend>roscpp</depend>

    <!-- Private (fetched via conan) dependencies -->
    <!-- <depend>GTSAM</depend> -->
    <!-- <depend>Ceres</depend> -->

    <!-- Run-time dependencies -->
    <exec_depend>rviz</exec_depend>
</package>
